--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "zhamao/connection-manager": "^1.0",
         "jelix/version": "^2.0",
         "league/climate": "^3.6",
-        "psy/psysh": "^0.10"
+        "psy/psysh": "@stable",
+        "doctrine/orm": "^2.9"
     },
     "suggest": {
         "ext-ctype": "Use C/C++ extension instead of polyfill will be more efficient",
@@ -45,7 +46,9 @@
     },
     "autoload": {
         "psr-4": {
-            "ZM\\": "src/ZM"
+            "ZM\\": "src/ZM",
+            "Module\\": "src/Module",
+            "Custom\\": "src/Custom"
         },
         "files": [
             "src/ZM/global_functions.php"
