--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Deploy to Zhamao Server
         uses: easingthemes/ssh-deploy@main
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_SERVER_SECRET_KEY }}
+          SSH_PRIVATE_KEY: ${{ secrets.ZHAMAO_XIN_PRIVATE_KEY }}
           ARGS: "-rltgoDzvO --delete"
           SOURCE: "/github/workspace/site/"
-          REMOTE_HOST: ${{ secrets.DEPLOY_SERVER_HOST }}
-          REMOTE_USER: ${{ secrets.DEPLOY_SERVER_USER }}
-          TARGET: ${{ secrets.DEPLOY_SERVER_TARGET }}
+          REMOTE_HOST: ${{ secrets.ZHAMAO_XIN_HOST }}
+          REMOTE_USER: ${{ secrets.ZHAMAO_XIN_USER }}
+          TARGET: ${{ secrets.ZHAMAO_XIN_TARGET }}
