--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,15 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CONFIG_FILE: mkdocs.yml
           EXTRA_PACKAGES: build-base
+      - name: Copy deployment to current folder
+        run: |
+          cp -r "${GITHUB_WORKSPACE}/site" "./deploy"
       - name: Deploy to Zhamao Server
         uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{ secrets.ZHAMAO_XIN_PRIVATE_KEY }}
           ARGS: "-rltgoDzvO --delete"
-          SOURCE: "/github/workspace/site/"
+          SOURCE: "deploy/"
           REMOTE_HOST: ${{ secrets.ZHAMAO_XIN_HOST }}
           REMOTE_USER: ${{ secrets.ZHAMAO_XIN_USER }}
           TARGET: ${{ secrets.ZHAMAO_XIN_TARGET }}
