update to version 2.5.5 (buid 422)

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "jelix/version": "^2.0",
         "league/climate": "^3.6",
         "psy/psysh": "@stable",
-        "doctrine/orm": "^2.9"
+        "doctrine/dbal": "^2.13.1"
     },
     "suggest": {
         "ext-ctype": "Use C/C++ extension instead of polyfill will be more efficient",
