--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ theme:
     accent: indigo
   features:
     - navigation.tabs
+    - navigation.sections
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js
   - javascripts/config.js
@@ -66,6 +67,7 @@ nav:
       - 基本配置: guide/basic-config.md
       - 编写模块: guide/write-module.md
       - 注册事件响应: guide/register-event.md
+      - 升级指南: guide/upgrade.md
       - 错误码对照表: guide/errcode.md
   - 事件和注解:
       - 事件和注解: event/index.md
@@ -77,9 +79,9 @@ nav:
       - 事件分发器: event/event-dispatcher.md
   - 框架组件:
       - 框架组件: component/index.md
-      - 上下文: component/context.md
       - 聊天机器人组件:
-          - 机器人 API: component/bot/robot-api.md
+          - 机器人动作（V12）: component/bot/robot-api-12.md
+          - 机器人动作（V11）: component/bot/robot-api.md
           - CQ 码（多媒体消息）: component/bot/cqcode.md
           - 机器人消息处理: component/bot/message-util.md
           - Token 验证: component/bot/access-token.md
@@ -92,33 +94,36 @@ nav:
           - ZMAtomic 原子计数器: component/store/atomics.md
           - SpinLock 自旋锁: component/store/spin-lock.md
           - 文件管理: component/store/data-provider.md
+      - 通用组件:
+          - 上下文: component/common/context.md
+          - 协程池: component/common/coroutine-pool.md
+          - 单例类: component/common/singleton-trait.md
+          - ZMUtil 杂项: component/common/zmutil.md
+          - 全局方法: component/common/global-functions.md
+          - Console 终端: component/common/console.md
+          - TaskWorker 管理: component/common/task-worker.md
+          - Terminal 终端: component/common/remote-terminal.md
       - HTTP 服务器工具类:
-          - HTTP 和 WebSocket 客户端: component/zmrequest.md
-          - HTTP 路由管理: component/route-manager.md
+          - HTTP 和 WebSocket 客户端: component/http/zmrequest.md
+          - HTTP 路由管理: component/http/route-manager.md
       - 模块/插件管理:
           - 模块打包: component/module/module-pack.md
           - 模块解包: component/module/module-unpack.md
-      - 协程池: component/coroutine-pool.md
-      - 单例类: component/singleton-trait.md
-      - ZMUtil 杂项: component/zmutil.md
-      - 全局方法: component/global-functions.md
-      - Console 终端: component/console.md
-      - TaskWorker 管理: component/task-worker.md
-      - Terminal 终端: component/remote-terminal.md
   - 进阶开发:
       - 进阶开发: advanced/index.md
-      - 框架剖析: advanced/framework-structure.md
-      - 框架启动模式: advanced/custom-start.md
-      - 手动安装环境: advanced/manually-install.md
-      - 从 v1 升级: advanced/to-v2.md
-      - 内部类文件手册: advanced/inside-class.md
-      - 接入 WebSocket 客户端: advanced/connect-ws-client.md
-      - 框架多进程: advanced/multi-process.md
-      - TaskWorker 提高并发: advanced/task-worker.md
+      - 框架高级开发:
+          - 框架剖析: advanced/framework-structure.md
+          - 框架启动模式: advanced/custom-start.md
+          - 手动安装环境: advanced/manually-install.md
+          - 内部类文件手册: advanced/inside-class.md
+          - 框架多进程: advanced/multi-process.md
+          - TaskWorker 提高并发: advanced/task-worker.md
       - 开发实战教程:
+          - 接入 WebSocket 客户端: advanced/connect-ws-client.md
           - 编写管理员才能触发的功能: advanced/example/admin.md
   - FAQ:
       - FAQ: faq/FAQ.md
+      - 从 v1 升级: faq/to-v2.md
       - 框架常见问题（持续更新）: faq/usual-question.md
       - 启动时报错 Address already in use: faq/address-already-in-use.md
       - 出现 deadlock 字样: faq/display-deadlock.md
