add PHP8 Attribute compatibility (build 439, 2.7.0-beta4)

--- a/composer.json
+++ b/composer.json
@@ -36,18 +36,20 @@
         "ext-json": "*",
         "ext-posix": "*",
         "doctrine/annotations": "~1.12 || ~1.4.0",
-        "symfony/polyfill-ctype": "^1.19",
-        "symfony/polyfill-mbstring": "^1.19",
-        "symfony/console": "~5.0 || ~4.0 || ~3.0",
-        "symfony/routing": "~5.0 || ~4.0 || ~3.0",
-        "zhamao/console": "^1.0",
-        "zhamao/config": "^1.0",
-        "zhamao/request": "^1.1",
-        "zhamao/connection-manager": "^1.0",
+        "doctrine/dbal": "^2.13.1",
         "jelix/version": "^2.0",
+        "koriym/attributes": "^1.0",
         "league/climate": "^3.6",
         "psy/psysh": "@stable",
-        "doctrine/dbal": "^2.13.1"
+        "symfony/console": "~5.0 || ~4.0 || ~3.0",
+        "symfony/polyfill-ctype": "^1.19",
+        "symfony/polyfill-mbstring": "^1.19",
+        "symfony/polyfill-php80": "^1.16",
+        "symfony/routing": "~5.0 || ~4.0 || ~3.0",
+        "zhamao/config": "^1.0",
+        "zhamao/connection-manager": "^1.0",
+        "zhamao/console": "^1.0",
+        "zhamao/request": "^1.1"
     },
     "suggest": {
         "ext-ctype": "Use C/C++ extension instead of polyfill will be more efficient",
