--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "jelix/version": "^2.0",
         "koriym/attributes": "^1.0",
         "league/climate": "^3.6",
-        "psy/psysh": "@stable",
+        "psy/psysh": "^0.11.2",
         "symfony/console": "~5.0 || ~4.0 || ~3.0",
         "symfony/polyfill-ctype": "^1.19",
         "symfony/polyfill-mbstring": "^1.19",
