--- a/composer.json
+++ b/composer.json
@@ -77,11 +77,11 @@
         "sort-packages": true
     },
     "require-dev": {
-        "swoole/ide-helper": "@dev",
-        "phpunit/phpunit": "^8.5 || ^9.0",
         "brainmaestro/composer-git-hooks": "^2.8",
         "friendsofphp/php-cs-fixer": "^3.2 != 3.7.0",
-        "phpstan/phpstan": "^1.1"
+        "phpstan/phpstan": "^1.1",
+        "phpunit/phpunit": "^8.5 || ^9.0",
+        "swoole/ide-helper": "^4.5"
     },
     "scripts": {
         "post-install-cmd": [
