--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,11 @@
     "minimum-stability": "stable",
     "license": "Apache-2.0",
     "extra": {
-        "exclude_annotate": [
-            "src/ZM"
-        ],
+        "zm": {
+            "exclude-annotation-path": [
+                "src/ZM"
+            ]
+        },
         "hooks": {
             "post-merge": "composer install",
             "pre-commit": [
