--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -1,4 +1,4 @@
-name: MkDocs Auto Deploy
+name: VuePress Auto Deploy
 on:
   push:
     branches:
@@ -13,15 +13,14 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy docs to GitHub Pages
-        uses: mhausenblas/mkdocs-deploy-gh-pages@master
+        uses: jenkey2011/vuepress-deploy@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CUSTOM_DOMAIN: framework.zhamao.me
-          CONFIG_FILE: mkdocs.yml
-          EXTRA_PACKAGES: build-base
+          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BUILD_SCRIPT: yarn && yarn docs:build
+          BUILD_DIR: docs/.vuepress/dist/
       - name: Copy deployment to current folder
         run: |
-          cp -r "${GITHUB_WORKSPACE}/site" "./deploy"
+          cp -r "${GITHUB_WORKSPACE}/docs/.vuepress/dist" "./deploy"
       - name: Deploy to Zhamao Server
         uses: easingthemes/ssh-deploy@main
         env:
