--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
   pull_request:
     branches:
       - master
@@ -13,6 +16,9 @@ on:
       - reopened
       - ready_for_review
       - review_requested
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
 
 jobs:
   integration:
