staging commit, will be removed

--- a/composer.json
+++ b/composer.json
@@ -37,11 +37,14 @@
         "php": "^7.2 || ^7.3 || ^7.4 || ^8.0 || ^8.1",
         "ext-json": "*",
         "ext-posix": "*",
+        "doctrine/cache": "^2.1",
         "doctrine/dbal": "^2.13.1",
+        "doctrine/orm": "^2.11",
         "dragonmantank/cron-expression": "^3.3",
         "jelix/version": "^2.0",
         "koriym/attributes": "^1.0",
         "psy/psysh": "^0.11.2",
+        "symfony/cache": "^6.0",
         "symfony/console": "~5.0 || ~4.0 || ~3.0",
         "symfony/polyfill-ctype": "^1.19",
         "symfony/polyfill-mbstring": "^1.19",
