--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,6 +15,11 @@
             <directory suffix="Test.php">./tests</directory>
         </testsuite>
     </testsuites>
+    <coverage processUncoveredFiles="true">
+        <include>
+            <directory suffix=".php">./src/ZM</directory>
+        </include>
+    </coverage>
     <php>
         <env name="APP_ENV" value="testing"/>
     </php>
