--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,10 +18,14 @@
             <directory suffix="Test.php">./tests</directory>
         </testsuite>
     </testsuites>
-    <coverage processUncoveredFiles="true">
+    <coverage>
         <include>
             <directory suffix=".php">./src/ZM</directory>
         </include>
+        <report>
+            <html outputDirectory="./build/html-coverage"/>
+            <clover outputFile="./build/coverage.xml"/>
+        </report>
     </coverage>
     <php>
         <env name="APP_ENV" value="testing"/>
