Add tests to Annotation exclusion

--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,8 @@
         },
         "zm": {
             "exclude-annotation-path": [
-                "src/ZM"
+                "src/ZM",
+                "tests"
             ]
         }
     },
