--- a/composer.json
+++ b/composer.json
@@ -91,7 +91,7 @@
         "post-install-cmd": [
             "[ $COMPOSER_DEV_MODE -eq 0 ] || vendor/bin/cghooks add"
         ],
-        "analyse": "phpstan analyse --memory-limit 300M -l 0 ./src",
+        "analyse": "phpstan analyse --memory-limit 300M",
         "cs-fix": "php-cs-fixer fix $1",
         "test": "bin/phpunit-swoole --no-coverage"
     }
