--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,3 +5,4 @@ parameters:
     - ./src/
   ignoreErrors:
     - '#Used constant OS_TYPE_(LINUX|WINDOWS) not found#'
+    - '#Constant .* not found#'
