--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -1,4 +1,4 @@
-name: Integration Test
+name: Integration and Style Test
 
 on:
   push:
@@ -61,5 +61,41 @@ jobs:
       - name: Run Static Analysis
         run: "composer analyse"
 
+      - name: Run PHPUnit
+        run: "composer test"
+
+  cs-check:
+    name: PHP CS Fixer Check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup PHP 7.2
+        uses: "shivammathur/setup-php@v2"
+        with:
+          php-version: "7.2"
+          extensions: swoole, posix, json
+
+      - name: Setup problem matchers for PHP
+        run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+
+      - name: Validate composer.json
+        run: "composer validate --strict"
+
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install Composer Dependencies
+        run: "composer install --prefer-dist --no-progress --optimize-autoloader"
+
       - name: Run PHP CS Fixer Check
-        run: "./vendor/bin/php-cs-fixer fix --dry-run --diff"
+        run: "composer cs-fix -- --dry-run --diff"
