--- a/composer.json
+++ b/composer.json
@@ -92,7 +92,7 @@
             "[ $COMPOSER_DEV_MODE -eq 0 ] || vendor/bin/cghooks add"
         ],
         "analyse": "phpstan analyse --memory-limit 300M",
-        "cs-fix": "php-cs-fixer fix $1",
+        "cs-fix": "php-cs-fixer fix",
         "test": "bin/phpunit-swoole --no-coverage"
     }
 }
