--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -37,6 +37,8 @@ jobs:
         with:
           php-version: ${{ matrix.php-versions }}
           extensions: swoole, posix, json
+        env:
+          SWOOLE_CONFIGURE_OPTS: --enable-openssl
 
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
