--- a/.github/workflows/increment-build-number.yml
+++ b/.github/workflows/increment-build-number.yml
@@ -23,8 +23,9 @@ jobs:
 
       - name: Commit change
         run: |
+          BUILD_ID=$(cat src/ZM/ConsoleApplication.php | grep "VERSION_ID = " | sed 's/[^0-9]//g')
           git config --global user.name 'Github Build Bot'
           git config --global user.email 'noreply@github.com'
           git add src/ZM/ConsoleApplication.php
-          git commit -m "increment build number"
+          git commit -m "increment build number (build $BUILD_ID)"
           git push
