--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,5 +6,6 @@ parameters:
   ignoreErrors:
     - '#Used constant OS_TYPE_(LINUX|WINDOWS) not found#'
     - '#Constant .* not found#'
+    - '#PHPDoc tag @throws with type Psr\\Container\\ContainerExceptionInterface is not subtype of Throwable#'
   dynamicConstantNames:
     - SWOOLE_VERSION
