--- a/.github/workflows/increment-build-number.yml
+++ b/.github/workflows/increment-build-number.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        
+
       - name: Setup PHP
         uses: "shivammathur/setup-php@v2"
         with:
@@ -26,7 +26,7 @@ jobs:
 
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
-        
+
       - name: Get composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
@@ -40,11 +40,14 @@ jobs:
 
       - name: Install Composer Dependencies
         run: "composer install --prefer-dist --no-progress --optimize-autoloader"
-        
+
       - name: Generate API Docs
+        id: generate-api-docs
+        continue-on-error: true
         run: bin/gendoc
-        
+
       - name: Commit api docs
+        if: steps.generate-api-docs.outcome == 'success'
         run: |
           git config --global user.name 'Github Build Bot'
           git config --global user.email 'noreply@github.com'
