--- a/composer.json
+++ b/composer.json
@@ -98,6 +98,6 @@
         ],
         "analyse": "phpstan analyse --memory-limit 300M",
         "cs-fix": "php-cs-fixer fix",
-        "test": "bin/phpunit-swoole --no-coverage -c phpunit.xml.dist"
+        "test": "bin/phpunit-swoole --no-coverage"
     }
 }
