change @sunxyw email

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         },
         {
             "name": "sunxyw",
-            "email": "xy2496419818@gmail.com"
+            "email": "dev@sunxyw.xyz"
         }
     ],
     "require": {
