update workflows for future develop

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - master
+      - '*-develop'
     paths:
       - '**/**.php'
   pull_request:
     branches:
       - master
+      - '*-develop'
     types:
       - opened
       - synchronize
