--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,10 +4,10 @@ parameters:
   paths:
     - ./src/
   ignoreErrors:
-    - '#Used constant OS_TYPE_(LINUX|WINDOWS) not found#'
     - '#Constant .* not found#'
     - '#PHPDoc tag @throws with type Psr\\Container\\ContainerExceptionInterface is not subtype of Throwable#'
     - '#Unsafe usage of new static#'
+    - '#Call to method initTableList\(\) of deprecated class ZM\\DB\\DB#'
   dynamicConstantNames:
     - SWOOLE_VERSION
     - ZM_TEST_LOG_DEBUG
