--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,16 @@
         "ext-json": "*",
         "doctrine/dbal": "^2.13.1",
         "dragonmantank/cron-expression": "^3.3",
-        "jasny/phpdoc-parser": "^1.0",
         "jelix/version": "^2.0",
         "koriym/attributes": "^1.0",
-        "onebot/libonebot": "dev-develop",
         "psr/container": "^2.0",
         "symfony/console": "~6.0 || ~5.0 || ~4.0",
         "symfony/polyfill-ctype": "^1.19",
         "symfony/polyfill-mbstring": "^1.19",
         "symfony/polyfill-php80": "^1.16",
         "symfony/routing": "~6.0 || ~5.0 || ~4.0",
-        "zhamao/logger": "dev-master"
+        "zhamao/logger": "dev-master",
+        "onebot/libonebot": "dev-develop"
     },
     "require-dev": {
         "brainmaestro/composer-git-hooks": "^2.8",
