refactor phpunit-swoole to phpunit-zm and move old test cases

--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
     },
     "bin": [
         "bin/gendoc",
-        "bin/phpunit-swoole",
+        "bin/phpunit-zm",
         "bin/zhamao"
     ],
     "config": {
