--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php": "^7.2 || ^7.3 || ^7.4 || ^8.0 || ^8.1",
+        "php": "^7.4 || ^8.0 || ^8.1",
         "ext-json": "*",
         "doctrine/dbal": "^2.13.1",
         "dragonmantank/cron-expression": "^3.3",
@@ -22,7 +22,7 @@
         "koriym/attributes": "^1.0",
         "onebot/libonebot": "dev-develop",
         "psr/container": "^2.0",
-        "symfony/console": "~6.0 || ~5.0 || ~4.0",
+        "symfony/console": "^6.0 || ^5.0 || ^4.0",
         "symfony/polyfill-ctype": "^1.19",
         "symfony/polyfill-mbstring": "^1.19",
         "symfony/polyfill-php80": "^1.16",
