--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ "ubuntu-latest", "macos-latest" ]
-        php-versions: [ "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        php-versions: [ "7.4", "8.0", "8.1" ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
