--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ "ubuntu-latest", "macos-latest" ]
+        operating-system: [ "ubuntu-latest", "macos-latest", "windows-latest" ]
         php-versions: [ "7.4", "8.0", "8.1" ]
     steps:
       - name: Checkout code
@@ -36,7 +36,7 @@ jobs:
         uses: "shivammathur/setup-php@v2"
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: swoole, posix, json
+          extensions: swoole, posix, json, mbstring
         env:
           SWOOLE_CONFIGURE_OPTS: --enable-openssl
 
@@ -62,6 +62,9 @@ jobs:
 
       - name: Run Static Analysis
         run: "composer analyse"
+
+      - name: Run PHPUnit
+        run: "composer test"
 
   cs-check:
     name: PHP CS Fixer Check
