add pest support

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "brainmaestro/composer-git-hooks": "^2.8",
         "friendsofphp/php-cs-fixer": "^3.2 != 3.7.0",
         "jetbrains/phpstorm-attributes": "^1.0",
+        "pestphp/pest": "^1.21",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
@@ -74,7 +75,8 @@
         "optimize-autoloader": true,
         "sort-packages": true,
         "allow-plugins": {
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "pestphp/pest-plugin": true
         }
     },
     "extra": {
