--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "koriym/attributes": "^1.0",
         "onebot/libonebot": "dev-develop",
         "psr/container": "^2.0",
+        "psy/psysh": "^0.11.8",
         "symfony/console": "^6.0 || ^5.0 || ^4.0",
         "symfony/polyfill-ctype": "^1.19",
         "symfony/polyfill-mbstring": "^1.19",
