--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "symfony/polyfill-ctype": "^1.19",
         "symfony/polyfill-mbstring": "^1.19",
         "symfony/polyfill-php80": "^1.16",
-        "symfony/routing": "~6.0 || ~5.0 || ~4.0",
-        "zhamao/logger": "dev-master"
+        "symfony/routing": "~6.0 || ~5.0 || ~4.0"
     },
     "require-dev": {
         "brainmaestro/composer-git-hooks": "^2.8",
