--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -36,7 +36,7 @@ jobs:
         uses: "shivammathur/setup-php@v2"
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: swoole, posix, json, mbstring
+          extensions: swoole, posix, json, mbstring, pdo, sqlite3, pdo_sqlite
         env:
           SWOOLE_CONFIGURE_OPTS: --enable-openssl
 
