avoid duplicate workflow runs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,22 @@ on:
   workflow_dispatch:
 
 jobs:
+  pre_job:
+    runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@v4
+        with:
+          concurrent_skipping: same_content_newer
+          skip_after_successful_duplicate: true
+          paths: '["src/**", "tests/**", "bin/phpunit-zm"]'
+          do_not_skip: '["workflow_dispatch", "schedule"]'
+
   test:
+    needs: pre_job
+    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     strategy:
       matrix:
         operating-system: [ ubuntu-latest, windows-latest, macos-latest ]
