--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -6,7 +6,22 @@ on:
   workflow_dispatch:
 
 jobs:
+  pre_job:
+    runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@v4
+        with:
+          concurrent_skipping: same_content_newer
+          skip_after_successful_duplicate: true
+          paths: '["src/**", "tests/**"]'
+          do_not_skip: '["workflow_dispatch", "schedule"]'
+
   analyse:
+    needs: pre_job
+    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Static Analysis
     runs-on: ubuntu-latest
     steps:
