add docker init to InitCommand

--- a/docker/walle-q/Dockerfile
+++ b/docker/walle-q/Dockerfile
@@ -2,11 +2,13 @@ FROM alpine:latest
 
 MAINTAINER sunxyw <me@sunxyw.xyz>
 
-RUN apk add --no-cache curl && \
-    mkdir -p /bot && \
-    curl -L -o /bot/walle-q https://github.com/onebot-walle/walle-q/releases/latest/download/walle-q-i686-linux-musl && \
-    chmod +x /bot/walle-q
+RUN apk add --no-cache curl
+RUN mkdir -p /bot && \
+    curl -fsSL https://github.com/onebot-walle/walle-q/releases/latest/download/walle-q-i686-linux-musl.tar.gz -O && \
+    tar -zxvf walle-q-i686-linux-musl.tar.gz -C /bot && \
+    rm -rf walle-q-i686-linux-musl.tar.gz && \
+    chmod +x /bot/walle-q-i686-linux-musl
 
 ENV TZ=Asia/Shanghai
 
-ENTRYPOINT [ "/bot/walle-q" ]
+ENTRYPOINT [ "/bot/walle-q-i686-linux-musl" ]
