--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
         "php": "^8.0 || ^8.1",
         "ext-json": "*",
+        "ext-tokenizer": "*",
         "doctrine/dbal": "^2.13.1",
         "dragonmantank/cron-expression": "^3.3",
         "jelix/version": "^2.0",
