--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "jelix/version": "^2.0",
         "koriym/attributes": "^1.0",
         "onebot/libonebot": "dev-develop",
+        "php-di/php-di": "^7",
         "psr/container": "^2.0",
         "psy/psysh": "^0.11.8",
         "symfony/console": "^6.0",
