--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
         }
     ],
     "require": {
-        "php": "^8.0 || ^8.1",
+        "php": "^8.0 || ^8.1 || ^8.2",
         "ext-json": "*",
         "ext-tokenizer": "*",
         "doctrine/dbal": "^2.13.1",
         "dragonmantank/cron-expression": "^3.3",
         "jelix/version": "^2.0",
         "koriym/attributes": "^1.0",
-        "onebot/libonebot": "dev-develop",
+        "onebot/libonebot": "^0.5",
         "php-di/php-di": "^7",
         "psr/container": "^2.0",
         "psy/psysh": "^0.11.8",
