--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,6 +4,8 @@ parameters:
   paths:
     - ./src/
     - ./tests/
+  excludePaths:
+    - ./src/ZM/Exception/Solution/SolutionRepository.php
   ignoreErrors:
     - '#Constant .* not found#'
     - '#PHPDoc tag @throws with type Psr\\Container\\ContainerExceptionInterface is not subtype of Throwable#'
