--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - master
+      - main
     paths:
       - 'docs/**'
       - 'ext/**'
@@ -32,7 +33,7 @@ jobs:
           SOURCE: "deploy/"
           REMOTE_HOST: ${{ secrets.ZHAMAO_XIN_HOST }}
           REMOTE_USER: ${{ secrets.ZHAMAO_XIN_USER }}
-          TARGET: ${{ secrets.ZHAMAO_XIN_TARGET }}
+          TARGET: ${{ secrets.FRAMEWORK_ZHAMAO_XIN_TARGET }}
       - name: deploy script file
         uses: wlixcc/SFTP-Deploy-Action@v1.2
         with:
