--- a/.github/workflows/increment-build-number.yml
+++ b/.github/workflows/increment-build-number.yml
@@ -3,8 +3,7 @@ name: Increment Build Number
 on:
   pull_request:
     branches:
-      - master
-      - '*-develop'
+      - main
     types:
       - closed
     paths:
@@ -24,7 +23,7 @@ jobs:
       - name: Setup PHP
         uses: sunxyw/workflows/setup-environment@main
         with:
-          php-version: 8.0
+          php-version: 8.1
           php-extensions: swoole, posix, json
           operating-system: ubuntu-latest
           use-cache: true
