add workflow timeout limit

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,7 @@ jobs:
         php-version: [ 8.0, 8.1, 8.2 ]
     name: PHP ${{ matrix.php-version }} Test (${{ matrix.operating-system }})
     runs-on: ${{ matrix.operating-system }}
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v3
