--- a/.github/workflows/coding-style.yml
+++ b/.github/workflows/coding-style.yml
@@ -24,6 +24,7 @@ jobs:
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Code Style
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v3
