--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "symfony/console": "^6.0",
         "symfony/polyfill-ctype": "^1.19",
         "symfony/polyfill-mbstring": "^1.19",
-        "symfony/routing": "~6.0 || ~5.0 || ~4.0"
+        "symfony/routing": "~6.0 || ~5.0 || ~4.0",
+        "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
         "captainhook/captainhook": "^5.10",
