update plugin install and load strategy

--- a/src/Templates/PluginMain.php.template
+++ b/src/Templates/PluginMain.php.template
@@ -4,10 +4,13 @@ declare(strict_types=1);
 
 namespace {namespace};
 
+use ZM\Annotation\OneBot\BotCommand;
+use ZM\Context\BotContext;
+
 class {class}
 {
-    #[\BotCommand(match: '测试{basename}')]
-    public function firstBotCommand(\BotContext $ctx): void
+    #[BotCommand(match: '测试{basename}')]
+    public function firstBotCommand(BotContext $ctx): void
     {
         $ctx->reply('这是{name}插件的第一个命令！');
     }
